# agent-knowledge-server

./: .gitignore  .mcp.json  AGENTS.md  README.md  claude-plugin.json  pyproject.toml
.claude-plugin/: marketplace.json
docs/: 2026-05-22-gw-docs-mcp-design.md
docs/superpowers/plans/: 2026-05-22-gw-docs-mcp.md  2026-05-25-agent-knowledge-server.md  2026-05-25-local-knowledge-mcp.md
docs/superpowers/specs/: 2026-05-25-agent-knowledge-server-design.md  2026-05-25-agent-knowledge-server-installer-skill-design.md  2026-05-25-agent-knowledge-server-llm-ingestion-design.md  2026-05-25-agent-knowledge-server-rebuild-spec.md  2026-05-25-local-knowledge-mcp-design.md  2026-05-25-local-knowledge-mcp-installer-skill-design.md  2026-05-25-local-knowledge-mcp-llm-ingestion-design.md
skills/agent-knowledge-server/: SKILL.md
src/agent_knowledge_server/: cli.py  config.py  indexer.py  installer.py  loaders.py  registry.py  searcher.py  server.py
src/gw_docs_mcp/: cli.py  config.py  indexer.py  searcher.py  server.py
src/local_knowledge_mcp/: cli.py  config.py  indexer.py  installer.py  loaders.py  registry.py  searcher.py  server.py
tests/: conftest.py  test_cli.py  test_config.py  test_indexer.py  test_installer.py  test_integration.py  test_loaders.py  test_registry.py  test_searcher.py  test_server.py
