[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-knowledge-mcp"
version = "2.0.0"
description = "Local MCP knowledge server for explicitly curated files and URLs"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pymupdf>=1.24.0",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",
    "typer>=0.12.0",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "numpy>=1.26.0",
]

[project.scripts]
local-knowledge-mcp = "local_knowledge_mcp.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/local_knowledge_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
