[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-knowledge-server"
version = "2.0.0"
description = "Curated agent knowledge server for coding agents"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pymupdf>=1.24.0",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",
    "typer>=0.12.0",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "numpy>=1.26.0",
]

[project.scripts]
agent-knowledge-server = "agent_knowledge_server.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_knowledge_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
